fix(css): Fix missing padding between logo and menu buttons

--- a/src/styles.css
+++ b/src/styles.css
@@ -68,6 +68,7 @@ button:active {
     font-size: 0.9rem;
     font-weight: bold;
     flex: 1;
+    padding-right: 8px;
 }
 
 .weather-app__btn {
